# fast_curvelet_transform

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: compare_np_jax_cameraman.py  compare_np_jax_cameraman_f32.ipynb  compare_np_jax_cameraman_f32.py  example_cameraman.py  example_cameraman_jax.py  example_filtering.py
fast_curvelet_transform/: __init__.py  curvelet.py  curvelet_jax.py  curvelet_system.py  curvelet_utils.py
notebooks/: compare_np_jax_cameraman_f32.ipynb  curvelet_demo.ipynb
tests/: test_curvelet.py  test_curvelet_jax.py  test_curvelet_jax_f32.py  test_curvelet_system.py  test_curvelet_utils.py  test_exhaustive_aggregate.py  test_exhaustive_corner_filters.py
