[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_curvelet_transform"
version = "0.1.0"
authors = [
  { name="Leonardo Zepeda-Núñez" },
]
description = "A fast discrete curvelet transform implementation in Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "matplotlib",
    "jax",
    "jaxlib",
]

[project.urls]
"Homepage" = "https://github.com/Forgotten/fast_curvelet_transform"

[tool.setuptools.packages.find]
where = ["."]
include = ["fast_curvelet_transform*"]
